fix circle image clipping #303

--- a/app/assets/stylesheets/modules/people.sass
+++ b/app/assets/stylesheets/modules/people.sass
@@ -39,10 +39,6 @@ div.avatar
   width: 60px
   height: 60px
 
-//.people .person_info .avatar img
-  //width: 80px
-  //height: 80px
-
 .recipient div.avatar
   max-width: 60px
   width: 17.647058823529%
@@ -232,3 +228,6 @@ section.profile
     right: 3em
     bottom: 1em
   line-height: 1.5
+
+.unaffiliated-people
+  margin-top: 24px
